# dark-factory

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.beads/: metadata.json
.claude-plugin/: plugin.json
.claude/commands/: dark-factory.md
commands/: dark-factory.md
dark_factory/: __init__.py  __main__.py  agents.py  checkpoint.py  cli.py  context_engineering.py  evaluator.py  explore.py  infra.py  ingest.py  init.py  intent.py  interview.py  issues.py  lock.py  orchestrator.py  pipeline.py  pr.py  scaffold.py  security.py  spec_analyzer.py  state.py  types.py  verify.py  worktree.py
dark_factory/commands/: dark-factory.md
docs/: evolution-options.md  next-improvements.md
openspec/changes/tdd-holdout-tests/: design.md  (+2 more)
tests/: test_agents.py  test_checkpoint.py  test_cli.py  test_cli_edge_cases.py  test_evaluator.py  test_explore.py  test_feedback_loop.py  test_full_pipeline.py  test_holdout.py  test_import_graph.py  test_incremental_resume.py  test_infra.py  test_ingest.py  test_init.py  test_integration.py  test_integration_dry_run.py  test_intent.py  test_interview.py  test_issues.py  test_lock.py  test_main.py  test_new_features.py  test_orchestrator.py  test_parallel_integration.py  test_pipeline.py  test_pipeline_phases.py  test_pr.py  test_prefetch_context.py  test_quality_gate.py  test_resume_validation.py  test_scaffold.py  test_security.py  test_security_edge_cases.py  test_spec_analyzer.py  test_state.py  test_state_roundtrip.py  test_symbol_context.py  test_tdd_integration.py  test_test_gen.py  test_test_mapping.py  (+5 more)
(+28 files in other folders)
