[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dark-factory"
version = "0.1.0"
description = "Deterministic Python pipeline for autonomous spec-to-PR orchestration"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "ai-commons" }]
dependencies = ["claude-code-sdk>=0.0.25"]

[project.scripts]
dark-factory = "dark_factory.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
